[gd_scene load_steps=10 format=1]

[ext_resource path="res://Screens/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Screens/Score_Screen/score_screen.gd" type="Script" id=2]
[ext_resource path="res://Screens/Credits_Screen/screen_rect.gd" type="Script" id=3]
[ext_resource path="res://Screens/GaroaHackerClubeBold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Screens/ShaderButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Screens/Score_Screen/retry_normal.png" type="Texture" id=6]
[ext_resource path="res://Screens/Score_Screen/back_normal.png" type="Texture" id=7]
[ext_resource path="res://Levels/background.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]

font/size = 80
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="Score Screen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 2 )

[node name="ScreenMargin" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script/script = ExtResource( 3 )

[node name="ScreenPortions" type="VBoxContainer" parent="ScreenMargin"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 25.0
margin/right = 1255.0
margin/bottom = 695.0
alignment = 0

[node name="Score" type="Label" parent="ScreenMargin/ScreenPortions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1230.0
margin/bottom = 164.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.901961, 0.501961, 1 )
text = "Score:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Highscore" type="Label" parent="ScreenMargin/ScreenPortions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 168.0
margin/right = 1230.0
margin/bottom = 332.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.901961, 0.501961, 1 )
text = "Highscore:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Retry" parent="ScreenMargin/ScreenPortions" instance=ExtResource( 5 )]

margin/top = 336.0
margin/right = 1230.0
margin/bottom = 500.0
textures/normal = ExtResource( 6 )

[node name="Back" parent="ScreenMargin/ScreenPortions" instance=ExtResource( 5 )]

margin/top = 504.0
margin/right = 1230.0
margin/bottom = 670.0
textures/normal = ExtResource( 7 )

[node name="Background" parent="." instance=ExtResource( 8 )]

editor/display_folded = true

[connection signal="released" from="ScreenMargin/ScreenPortions/Retry" to="." method="_on_Retry_released"]

[connection signal="released" from="ScreenMargin/ScreenPortions/Back" to="." method="_on_Back_released"]


